@@ -1,3 +1,8 @@
+2017-01-07 Riccardo Mottola <rm@gnu.org>
+
+	* GRText.m
+        Force paragraph spacing to 0.0 (needed for >= 10.4) and take it in account for lines
+
 2017-01-01 Riccardo Mottola <rm@gnu.org>
 
 	* GRCircle.m 
